// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`optionSelector > should work onChang - second selector 1`] = `[Function]`;

exports[`optionSelector > should work onChange - first selector 1`] = `[Function]`;

exports[`optionSelector > should work readonly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__a8s2fv0 styles_direction_horizontal__a8s2fv1"
    >
      <label
        class="styles_default__17td3g90 styles__a8s2fv4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
      >
        Region
      </label>
      <div
        class="styles_horizontal__a8s2fv6 styles__uf6pag0"
      >
        <div
          aria-controls="_r_5g_"
          aria-describedby="_r_5g_"
          class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
          tabindex="-1"
        >
          <div
            class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <div
              aria-controls="_r_5g_"
              aria-expanded="false"
              class="selectBar__r8qe46 selectBar__r8qe45 selectBar_readOnly_true__r8qe49 selectBar_size_large__r8qe4a selectBar_state_neutral__r8qe4e"
              data-disabled="false"
              data-readonly="true"
              data-testid="first-selector"
              id="_r_5e_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="selectBar__r8qe44 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
                style="--whiteSpace__qabug41: nowrap;"
              >
                Select item
              </span>
              <div
                class="selectBar_large__r8qe42 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkzm"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <svg
        aria-hidden="true"
        class="styles_horizontal__a8s2fva uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkze uv_icons_1sbwqkz26"
        focusable="false"
        height="20"
        viewBox="0 0 20 20"
        width="20"
      >
        <path
          clip-rule="evenodd"
          d="M2.5 10c0-.388.315-.703.703-.703h11.803l-1.969-1.829a.703.703 0 1 1 .957-1.03l3.281 3.047a.703.703 0 0 1 0 1.03l-3.28 3.047a.703.703 0 1 1-.958-1.03l1.97-1.829H3.202A.703.703 0 0 1 2.5 10"
        />
        <path
          d="M6.25 10a1.875 1.875 0 1 1-3.75 0 1.875 1.875 0 0 1 3.75 0"
        />
      </svg>
      <div
        class="styles_horizontal__a8s2fv8 styles__uf6pag0"
      >
        <div
          aria-controls="_r_5o_"
          aria-describedby="_r_5o_"
          class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
          tabindex="-1"
        >
          <div
            class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <div
              aria-controls="_r_5o_"
              aria-expanded="false"
              class="selectBar__r8qe46 selectBar__r8qe45 selectBar_disabled_true__r8qe47 selectBar_readOnly_true__r8qe49 selectBar_size_large__r8qe4a selectBar_state_neutral__r8qe4e"
              data-disabled="true"
              data-readonly="true"
              data-testid="second-selector"
              id="_r_5m_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="selectBar__r8qe44 style__m4c9ow0 style_disabled_true__m4c9ow1 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_31__m4c9ow25"
                style="--whiteSpace__qabug41: nowrap;"
              >
                Select item
              </span>
              <div
                class="selectBar_large__r8qe42 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkzm"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`optionSelector > should work with default props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__a8s2fv0 styles_direction_horizontal__a8s2fv1"
    >
      <label
        class="styles_default__17td3g90 styles__a8s2fv4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
      >
        Region
      </label>
      <div
        class="styles_horizontal__a8s2fv6 styles__uf6pag0"
      >
        <div
          aria-controls="_r_6_"
          aria-describedby="_r_6_"
          class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
          tabindex="-1"
        >
          <div
            class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <div
              aria-controls="_r_6_"
              aria-expanded="false"
              class="selectBar__r8qe46 selectBar__r8qe45 selectBar_size_large__r8qe4a selectBar_state_neutral__r8qe4e"
              data-disabled="false"
              data-readonly="false"
              data-testid="first-selector"
              id="_r_4_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="selectBar__r8qe44 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
                style="--whiteSpace__qabug41: nowrap;"
              >
                Select item
              </span>
              <div
                class="selectBar_large__r8qe42 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <svg
        aria-hidden="true"
        class="styles_horizontal__a8s2fva uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkze uv_icons_1sbwqkz26"
        focusable="false"
        height="20"
        viewBox="0 0 20 20"
        width="20"
      >
        <path
          clip-rule="evenodd"
          d="M2.5 10c0-.388.315-.703.703-.703h11.803l-1.969-1.829a.703.703 0 1 1 .957-1.03l3.281 3.047a.703.703 0 0 1 0 1.03l-3.28 3.047a.703.703 0 1 1-.958-1.03l1.97-1.829H3.202A.703.703 0 0 1 2.5 10"
        />
        <path
          d="M6.25 10a1.875 1.875 0 1 1-3.75 0 1.875 1.875 0 0 1 3.75 0"
        />
      </svg>
      <div
        class="styles_horizontal__a8s2fv8 styles__uf6pag0"
      >
        <div
          aria-controls="_r_e_"
          aria-describedby="_r_e_"
          class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
          tabindex="-1"
        >
          <div
            class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <div
              aria-controls="_r_e_"
              aria-expanded="false"
              class="selectBar__r8qe46 selectBar__r8qe45 selectBar_disabled_true__r8qe47 selectBar_size_large__r8qe4a selectBar_state_neutral__r8qe4e"
              data-disabled="true"
              data-readonly="false"
              data-testid="second-selector"
              id="_r_c_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="selectBar__r8qe44 style__m4c9ow0 style_disabled_true__m4c9ow1 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_31__m4c9ow25"
                style="--whiteSpace__qabug41: nowrap;"
              >
                Select item
              </span>
              <div
                class="selectBar_large__r8qe42 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkzm"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`optionSelector > should work with default values 1`] = `[Function]`;

exports[`optionSelector > should work with direction vertical 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__a8s2fv0 styles_direction_vertical__a8s2fv2"
    >
      <div
        class="styles_vertical__a8s2fv7 styles__uf6pag0"
      >
        <div
          aria-controls="_r_o_"
          aria-describedby="_r_o_"
          class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
          tabindex="-1"
        >
          <div
            class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <label
              class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_m_"
            >
              Region
            </label>
            <div
              aria-controls="_r_o_"
              aria-expanded="false"
              aria-label="Region"
              class="selectBar__r8qe46 selectBar__r8qe45 selectBar_size_large__r8qe4a selectBar_state_neutral__r8qe4e"
              data-disabled="false"
              data-readonly="false"
              data-testid="first-selector"
              id="_r_m_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="selectBar__r8qe44 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
                style="--whiteSpace__qabug41: nowrap;"
              >
                Select item
              </span>
              <div
                class="selectBar_large__r8qe42 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <svg
        aria-hidden="true"
        class="styles_vertical__a8s2fvb uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkze uv_icons_1sbwqkz26"
        focusable="false"
        height="20"
        viewBox="0 0 20 20"
        width="20"
      >
        <path
          clip-rule="evenodd"
          d="M10 2.5c.388 0 .703.315.703.703v11.803l1.829-1.969a.703.703 0 1 1 1.03.957l-3.047 3.281a.703.703 0 0 1-1.03 0l-3.047-3.28a.703.703 0 0 1 1.03-.958l1.829 1.97V3.202c0-.388.315-.703.703-.703"
        />
        <path
          d="M11.875 4.375a1.875 1.875 0 1 1-3.75 0 1.875 1.875 0 0 1 3.75 0"
        />
      </svg>
      <div
        class="styles_vertical__a8s2fv9 styles__uf6pag0"
      >
        <div
          aria-controls="_r_12_"
          aria-describedby="_r_12_"
          class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
          tabindex="-1"
        >
          <div
            class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <label
              class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_10_"
            >
              Zone
            </label>
            <div
              aria-controls="_r_12_"
              aria-expanded="false"
              aria-label="Zone"
              class="selectBar__r8qe46 selectBar__r8qe45 selectBar_disabled_true__r8qe47 selectBar_size_large__r8qe4a selectBar_state_neutral__r8qe4e"
              data-disabled="true"
              data-readonly="false"
              data-testid="second-selector"
              id="_r_10_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="selectBar__r8qe44 style__m4c9ow0 style_disabled_true__m4c9ow1 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_31__m4c9ow25"
                style="--whiteSpace__qabug41: nowrap;"
              >
                Select item
              </span>
              <div
                class="selectBar_large__r8qe42 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkzm"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`optionSelector > should work with disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__a8s2fv0 styles_direction_horizontal__a8s2fv1"
    >
      <label
        class="styles_default__17td3g90 styles__a8s2fv4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
      >
        Region
      </label>
      <div
        class="styles_horizontal__a8s2fv6 styles__uf6pag0"
      >
        <div
          aria-controls="_r_4s_"
          aria-describedby="_r_4s_"
          class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
          tabindex="-1"
        >
          <div
            class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <div
              aria-controls="_r_4s_"
              aria-expanded="false"
              class="selectBar__r8qe46 selectBar__r8qe45 selectBar_disabled_true__r8qe47 selectBar_size_large__r8qe4a selectBar_state_neutral__r8qe4e"
              data-disabled="true"
              data-readonly="false"
              data-testid="first-selector"
              id="_r_4q_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="selectBar__r8qe44 style__m4c9ow0 style_disabled_true__m4c9ow1 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_31__m4c9ow25"
                style="--whiteSpace__qabug41: nowrap;"
              >
                Select item
              </span>
              <div
                class="selectBar_large__r8qe42 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkzm"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <svg
        aria-hidden="true"
        class="styles_horizontal__a8s2fva uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkze uv_icons_1sbwqkz26"
        focusable="false"
        height="20"
        viewBox="0 0 20 20"
        width="20"
      >
        <path
          clip-rule="evenodd"
          d="M2.5 10c0-.388.315-.703.703-.703h11.803l-1.969-1.829a.703.703 0 1 1 .957-1.03l3.281 3.047a.703.703 0 0 1 0 1.03l-3.28 3.047a.703.703 0 1 1-.958-1.03l1.97-1.829H3.202A.703.703 0 0 1 2.5 10"
        />
        <path
          d="M6.25 10a1.875 1.875 0 1 1-3.75 0 1.875 1.875 0 0 1 3.75 0"
        />
      </svg>
      <div
        class="styles_horizontal__a8s2fv8 styles__uf6pag0"
      >
        <div
          aria-controls="_r_54_"
          aria-describedby="_r_54_"
          class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
          tabindex="-1"
        >
          <div
            class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <div
              aria-controls="_r_54_"
              aria-expanded="false"
              class="selectBar__r8qe46 selectBar__r8qe45 selectBar_disabled_true__r8qe47 selectBar_size_large__r8qe4a selectBar_state_neutral__r8qe4e"
              data-disabled="true"
              data-readonly="false"
              data-testid="second-selector"
              id="_r_52_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="selectBar__r8qe44 style__m4c9ow0 style_disabled_true__m4c9ow1 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_31__m4c9ow25"
                style="--whiteSpace__qabug41: nowrap;"
              >
                Select item
              </span>
              <div
                class="selectBar_large__r8qe42 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkzm"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`optionSelector > should work with error - first selector 1`] = `[Function]`;

exports[`optionSelector > should work with error - second selector 1`] = `[Function]`;

exports[`optionSelector > should work with hideWhenEmpty 1`] = `[Function]`;

exports[`optionSelector > should work with only one option 1`] = `[Function]`;

exports[`optionSelector > should work without hideWhenEmpty 1`] = `[Function]`;
